Fix base url bug

--- a/_includes/theme/head.html
+++ b/_includes/theme/head.html
@@ -20,5 +20,5 @@
 <meta name="twitter:description" content="{{ site.description }}">
 
 <link rel="alternative" href="/site-map.xml" title="{{ site.title }}" type="application/atom+xml">
-<link rel="short icon" type="image/x-icon" href="{{ site.baseurl }}/assets/img/base/favicon.png">
-<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/styles.css">
+<link rel="short icon" type="image/x-icon" href="{{ site.url }}/assets/img/base/favicon.png">
+<link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/css/styles.css">
