Fix site.url bugs

--- a/_includes/theme/header.html
+++ b/_includes/theme/header.html
@@ -1,12 +1,12 @@
 <!-- Header -->
 <header class="header-container">
     <nav class="nav-wrap">
-        <a href="/" class="nav-logo">{{ site.title }}</a>
+        <a href="{{ site.url }}" class="nav-logo">{{ site.title }}</a>
         <ul class="navigation">
 
-            <li><a href="/lists/categories">Categories</a></li>
-            <li><a href="/lists/tags">Tags</a></li>
-            <li><a href="/about/">About</a></li>
+            <li><a href="{{ site.url }}/lists/categories">Categories</a></li>
+            <li><a href="{{ site.url }}/lists/tags">Tags</a></li>
+            <li><a href="{{ site.url }}/about/">About</a></li>
             <li><a href="https://sadra.github.io/">فارسی</a></li>
 
         </ul>
