Modify style for better view

--- a/_sass/0-base/normalize.sass
+++ b/_sass/0-base/normalize.sass
@@ -57,8 +57,8 @@ samp
 dfn
   font-style: italic
 mark
-  background-color: #ff0
-  color: #000
+  background-color: $text-404
+  color: $black
 small
   font-size: 80%
 sub,
