--- a/_sass/0-base/style.sass
+++ b/_sass/0-base/style.sass
@@ -1,65 +1,44 @@
-$white: #FFFFFF
-$black: #000000
-
-$nav-item: #000000
-$nav-item-hover: #D84315
-
-$post_title: #1C1E24
-$post_title_hover: #42b64a
-$post_date: #9EA3B4
-
-$gray: #8a8a8a
-
-$title_color: #FFFFFF
-
-$primary: #1C1E24
-$secondary: #9EA3B4
-$highlight: #517AF4
-
-$link-highlight: #1360f4
-$link-highlight-hover: #8523f4
-
 h1
-  color: $primary
+  color: $text-header
 h2
   font-size: 1.875em
   font-weight: 500
   line-height: 1.2em
   opacity: .85
 h3
-  color: $primary
+  color: $text-header
 h4
   font-size: 1.375em
   font-weight: 500
-  color: $primary
+  color: $text-header
   opacity: .85
 h5
   font-size: 1.375em
   font-weight: 400
-  color: $primary
+  color: $text-header
 h6
   font-size: 0.75em
   text-transform: uppercase
   font-weight: 600
-  color: $secondary
+  color: $text-header
 small
   font-size: 0.75em
   font-weight: 300
-  color: $secondary
+  color: $text-date
   text-transform: uppercase
 p
   font-size: 1em
   font-weight: 200
   line-height: 2.5em
-  color: $secondary
+  color: $text-date
 a
-  color: $link-highlight
+  color: $text-link
 a:hover
-  color: $link-highlight-hover
+  color: $text-link-hover
 
 hr
   border-style: solid
-  color: $secondary
+  color: $text-paragraph
   opacity: .1
 .hr-padded
   margin: 100px 0 100px 0
@@ -81,7 +60,7 @@ hr
   right: 0
   bottom: 0
   left: 0
-  background: $primary
+  background: $black
   opacity: .35
 
 .div-ltr
