--- a/_sass/2-layouts/header.sass
+++ b/_sass/2-layouts/header.sass
@@ -38,7 +38,7 @@ header.header-container
       @media screen and (max-width: 500px)
         font-size: 0.9em
     .nav-logo:hover
-      color: $nav-item-hover
+      color: $text-nav-hover
 
     ul.navigation
       display: flex
@@ -49,11 +49,11 @@ header.header-container
         display: block
         padding-right: 30px
         a
-          color: $nav-item
+          color: $text-nav
           transition: all 0.15s ease-in
           font-size: 1em
         a:hover
-          color: $nav-item-hover
+          color: $text-nav-hover
         @media screen and (max-width: 500px)
           padding-right: 10px
           a
