--- a/_sass/1-modules/blockquote.sass
+++ b/_sass/1-modules/blockquote.sass
@@ -1,16 +1,16 @@
-blockquote 
-  background: #f9f9f9
-  border-left: 10px solid #c76c0c
+blockquote
+  background: $element-blockquote-bg
+  border-left: 10px solid $element-blockquote-border
   border-right: 0
   font-size: 16px
   line-height: 1.2
   text-align: justify
-  color: #cccccc
+  color: $text-quote
   margin: 1.5em 1.5px
   padding: 15px
 
 blockquote:before
-  color: #ccc
+  color: $gray-400
   content: " \201C "
   font-family: Georgia, serif
   font-size: 4em
@@ -21,4 +21,4 @@ blockquote:before
 
 blockquote p
   display: inline
-  color: #414141 !important
+  color: $text-quote !important
