--- a/_sass/1-modules/highlighter.sass
+++ b/_sass/1-modules/highlighter.sass
@@ -1,5 +1,3 @@
-
-
 /**
  * Code formatting
  */
@@ -29,12 +27,16 @@ pre.highlight
   @media screen and (max-width: 500px)
     padding: 10px 8px
 
+.highlighter-rouge
+  color: #eef
 
 code.highlighter-rouge
-  font-size: 85%
+  font-size: 1.2em
   color: #d14
   background: #eef
-  padding: 0 5px 0 5px
+  padding: 1.5px 6px
+  font-weight: bold
+  margin: 1px
 
 
 figure
