Modify style for better view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,8 +70,8 @@ dfn {
   font-style: italic; }
 
 mark {
-  background-color: #ff0;
-  color: #000; }
+  background-color: #ffb101;
+  color: #000000; }
 
 small {
   font-size: 80%; }
@@ -201,7 +201,7 @@ ul li {
   line-height: 1.6em; }
 
 h1 {
-  color: #1C1E24; }
+  color: #000000; }
 
 h2 {
   font-size: 1.875em;
@@ -210,46 +210,46 @@ h2 {
   opacity: 0.85; }
 
 h3 {
-  color: #1C1E24; }
+  color: #000000; }
 
 h4 {
   font-size: 1.375em;
   font-weight: 500;
-  color: #1C1E24;
+  color: #000000;
   opacity: 0.85; }
 
 h5 {
   font-size: 1.375em;
   font-weight: 400;
-  color: #1C1E24; }
+  color: #000000; }
 
 h6 {
   font-size: 0.75em;
   text-transform: uppercase;
   font-weight: 600;
-  color: #9EA3B4; }
+  color: #000000; }
 
 small {
   font-size: 0.75em;
   font-weight: 300;
-  color: #9EA3B4;
+  color: #BDBDBD;
   text-transform: uppercase; }
 
 p {
   font-size: 1em;
   font-weight: 200;
   line-height: 2.5em;
-  color: #9EA3B4; }
+  color: #BDBDBD; }
 
 a {
   color: #1360f4; }
 
 a:hover {
-  color: #8523f4; }
+  color: #29B6F6; }
 
 hr {
   border-style: solid;
-  color: #9EA3B4;
+  color: #2b2b2b;
   opacity: 0.1; }
 
 .hr-padded {
@@ -275,7 +275,7 @@ hr {
   right: 0;
   bottom: 0;
   left: 0;
-  background: #1C1E24;
+  background: #000000;
   opacity: 0.35; }
 
 .div-ltr {
@@ -310,26 +310,26 @@ table {
   padding: 0;
   border-collapse: collapse;
   font-family: VAZIR, Helvetica, sans-serif;
-  text-shadow: 1px 1px 0px #fff;
+  text-shadow: 1px 1px 0px #FFFFFF;
   margin: 20px auto;
-  border: #cccccc 1px solid;
+  border: #BDBDBD 1px solid;
   border-radius: 5px; }
   table th, table tr, table td {
     text-align: inherit; }
   table td {
-    border-left: 1px solid #cccccc; }
+    border-left: 1px solid #BDBDBD; }
   table td:last-child {
-    border-left: 0 solid #cccccc; }
+    border-left: 0 solid #BDBDBD; }
   table th {
-    border-left: 1px solid #cccccc; }
+    border-left: 1px solid #BDBDBD; }
   table th:last-child {
-    border-left: 0 solid #cccccc; }
+    border-left: 0 solid #BDBDBD; }
   table tr {
     padding: 0;
-    background-color: white;
+    background-color: #FFFFFF;
     margin: 0; }
   table tr:nth-child(2n) {
-    background-color: #f8f8f8; }
+    background-color: #F5F5F5; }
   table tr th {
     font-weight: bold;
     text-align: left;
@@ -345,7 +345,7 @@ table {
     margin-bottom: 0; }
 
 tbody tr {
-  border-top: 1px solid #cccccc; }
+  border-top: 1px solid #BDBDBD; }
 
 .table-container {
   overflow-x: scroll;
@@ -357,15 +357,15 @@ tbody tr {
   .dir-rtl table {
     direction: rtl; }
   .dir-rtl td {
-    border-left: 1px solid #cccccc;
-    border-right: 0 solid #cccccc; }
+    border-left: 1px solid #BDBDBD;
+    border-right: 0 solid #BDBDBD; }
   .dir-rtl td:last-child {
-    border-left: 0 solid #cccccc; }
+    border-left: 0 solid #BDBDBD; }
   .dir-rtl th {
-    border-left: 1px solid #cccccc;
-    border-right: 0 solid #cccccc; }
+    border-left: 1px solid #BDBDBD;
+    border-right: 0 solid #BDBDBD; }
   .dir-rtl th:last-child {
-    border-left: 0 solid #cccccc; }
+    border-left: 0 solid #BDBDBD; }
   .dir-rtl th, .dir-rtl tr, .dir-rtl td {
     text-align: inherit; }
 
@@ -374,15 +374,15 @@ tbody tr {
   .dir-ltr table {
     direction: ltr; }
   .dir-ltr td {
-    border-right: 1px solid #cccccc;
-    border-left: 0 solid #cccccc; }
+    border-right: 1px solid #BDBDBD;
+    border-left: 0 solid #BDBDBD; }
   .dir-ltr td:last-child {
-    border-right: 0 solid #cccccc; }
+    border-right: 0 solid #BDBDBD; }
   .dir-ltr th {
-    border-right: 1px solid #cccccc;
-    border-left: 0 solid #cccccc; }
+    border-right: 1px solid #BDBDBD;
+    border-left: 0 solid #BDBDBD; }
   .dir-ltr th:last-child {
-    border-right: 0 solid #cccccc; }
+    border-right: 0 solid #BDBDBD; }
   .dir-ltr th, .dir-ltr tr, .dir-ltr td {
     text-align: inherit; }
 
@@ -426,11 +426,16 @@ pre.highlight {
     .highlight {
       padding: 10px 8px; } }
 
+.highlighter-rouge {
+  color: #eef; }
+
 code.highlighter-rouge {
-  font-size: 85%;
+  font-size: 1.2em;
   color: #d14;
   background: #eef;
-  padding: 0 5px 0 5px; }
+  padding: 1.5px 6px;
+  font-weight: bold;
+  margin: 1px; }
 
 figure {
   margin: 0; }
@@ -654,7 +659,7 @@ figure {
       .image-wrapper img {
         max-width: 90%; } }
   .image-wrapper .image-caption {
-    color: #8a8a8a;
+    color: #9E9E9E;
     margin: 10px;
     font-size: 0.9em;
     font-style: italic; }
@@ -666,12 +671,12 @@ blockquote {
   font-size: 16px;
   line-height: 1.2;
   text-align: justify;
-  color: #cccccc;
+  color: #2b2b2b;
   margin: 1.5em 1.5px;
   padding: 15px; }
 
 blockquote:before {
-  color: #ccc;
+  color: #BDBDBD;
   content: " “";
   font-family: Georgia, serif;
   font-size: 4em;
@@ -682,7 +687,7 @@ blockquote:before {
 
 blockquote p {
   display: inline;
-  color: #414141 !important; }
+  color: #2b2b2b !important; }
 
 .video-container {
   margin: 20px auto;
@@ -771,7 +776,7 @@ header.header-container {
         header.header-container nav.nav-wrap .nav-logo {
           font-size: 0.9em; } }
     header.header-container nav.nav-wrap .nav-logo:hover {
-      color: #D84315; }
+      color: #009688; }
     header.header-container nav.nav-wrap ul.navigation {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -795,7 +800,7 @@ header.header-container {
           transition: all 0.15s ease-in;
           font-size: 1em; }
         header.header-container nav.nav-wrap ul.navigation li a:hover {
-          color: #D84315; }
+          color: #009688; }
         @media screen and (max-width: 500px) {
           header.header-container nav.nav-wrap ul.navigation li {
             padding-right: 10px; }
@@ -828,7 +833,7 @@ footer.footer-wrapper {
     margin-bottom: 15px; }
   footer.footer-wrapper .delimiter {
     width: 100%;
-    border-top: 1px solid #ededed; }
+    border-top: 1px solid #EEEEEE; }
   footer.footer-wrapper .footer-logo {
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
@@ -846,7 +851,7 @@ footer.footer-wrapper {
             flex-direction: column;
     margin: 0 auto;
     padding: 0 2rem;
-    background-color: #fff; }
+    background-color: #FFFFFF; }
   footer.footer-wrapper .logo-wrapper {
     display: block;
     max-width: 40px;
@@ -869,7 +874,7 @@ footer.footer-wrapper {
     margin: 0 5px;
     text-align: center;
     display: inline-block;
-    color: #111;
+    color: #000000;
     padding: 0;
     -webkit-transition: all 0.07s cubic-bezier(0.3, 0.1, 0.58, 1);
     transition: all 0.07s cubic-bezier(0.3, 0.1, 0.58, 1); }
@@ -886,16 +891,16 @@ footer.footer-wrapper {
     position: absolute;
     top: 0;
     left: 0;
-    border: 1px solid #111;
+    border: 1px solid #000000;
     border-radius: 2px;
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
     -webkit-transition: all 0.07s cubic-bezier(0.3, 0.1, 0.58, 1);
     transition: all 0.07s cubic-bezier(0.3, 0.1, 0.58, 1); }
   footer.footer-wrapper .footer-social-links a:hover {
-    color: #fff; }
+    color: #FFFFFF; }
   footer.footer-wrapper .footer-social-links a:hover:before {
-    background: #111; }
+    background: #000000; }
 
 .content {
   padding: 30px 10px;
@@ -974,7 +979,7 @@ footer.footer-wrapper {
           font-weight: 900;
           margin-right: 5px; } }
     .blog-post-list .blog-post-item-container .post-item-title:hover {
-      color: #42b64a; }
+      color: #009688; }
     .blog-post-list .blog-post-item-container .post-list-routes {
       margin: 5px 0 5px 5px; }
       .blog-post-list .blog-post-item-container .post-list-routes .tag-link {
@@ -994,9 +999,10 @@ footer.footer-wrapper {
           .blog-post-list .blog-post-item-container .post-list-routes .tag-link {
             font-size: 0.55em;
             margin-right: 1px; } }
-      .blog-post-list .blog-post-item-container .post-list-routes .tag-link:hover {
-        background-color: #E91E63;
-        border-color: #E91E63; }
+      .blog-post-list .blog-post-item-container .post-list-routes .tag-link:hover,
+      .blog-post-list .blog-post-item-container .post-list-routes .tag-link:active {
+        background-color: #b0167b;
+        border-color: #b0167b; }
       .blog-post-list .blog-post-item-container .post-list-routes .tag-link:before {
         content: "#"; }
       .blog-post-list .blog-post-item-container .post-list-routes .category-link {
@@ -1014,8 +1020,9 @@ footer.footer-wrapper {
         @media screen and (max-width: 500px) {
           .blog-post-list .blog-post-item-container .post-list-routes .category-link {
             font-size: 0.6em; } }
-      .blog-post-list .blog-post-item-container .post-list-routes .category-link:hover {
-        color: #9C27B0; }
+      .blog-post-list .blog-post-item-container .post-list-routes .category-link:hover,
+      .blog-post-list .blog-post-item-container .post-list-routes .category-link:active {
+        color: #37474F; }
       .blog-post-list .blog-post-item-container .post-list-routes .category-link:after {
         content: " / "; }
 
@@ -1041,7 +1048,7 @@ footer.footer-wrapper {
   margin: auto; }
   .blog-post-container p {
     font-size: 1em;
-    color: black;
+    color: #2b2b2b;
     font-weight: 100;
     line-height: 1.5em; }
   .blog-post-container ol li p {
@@ -1058,39 +1065,23 @@ footer.footer-wrapper {
     @media screen and (max-width: 400px) {
       .blog-post-container .post-title-container {
         margin: 10px auto; } }
-  .blog-post-container .author-card {
-    background: #f6f6f6;
-    padding: 15px;
-    border-radius: 5px;
-    border: 1px solid #f6f6f6;
-    width: 100%;
-    margin: 0 auto; }
-    .blog-post-container .author-card .author-message {
-      padding-top: 8px;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: start;
-          -ms-flex-align: start;
-              align-items: flex-start; }
-      .blog-post-container .author-card .author-message p {
-        -webkit-box-flex: 1;
-            -ms-flex: 1;
-                flex: 1;
-        font-size: 0.9em; }
-      .blog-post-container .author-card .author-message img {
-        margin-left: 0px;
-        margin-right: 10px;
-        width: 50px;
-        height: 50px; }
-    .blog-post-container .author-card .addthis_inline_share_toolbox {
-      direction: ltr;
-      margin: 5px auto;
-      text-align: left; }
   .blog-post-container .post_created {
-    margin-bottom: 20px; }
+    margin: 60px 0 50px 0; }
     .blog-post-container .post_created p {
-      color: #9EA3B4; }
+      color: #000000;
+      line-height: 0.6em; }
+    .blog-post-container .post_created .author_avatar {
+      float: left;
+      margin-right: 20px; }
+      .blog-post-container .post_created .author_avatar img {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%; }
+    .blog-post-container .post_created .post_info {
+      line-height: 0.8em;
+      padding-top: 2px;
+      margin-right: 15px;
+      width: 100%; }
   .blog-post-container .post-routes-list {
     margin: 25px 0 15px 5px; }
     .blog-post-container .post-routes-list .tag-link {
@@ -1110,9 +1101,10 @@ footer.footer-wrapper {
         .blog-post-container .post-routes-list .tag-link {
           font-size: 0.55em;
           margin-left: 1px; } }
-    .blog-post-container .post-routes-list .tag-link:hover {
-      background-color: #E91E63;
-      border-color: #E91E63; }
+    .blog-post-container .post-routes-list .tag-link:hover,
+    .blog-post-container .post-routes-list .tag-link:active {
+      background-color: #b0167b;
+      border-color: #b0167b; }
     .blog-post-container .post-routes-list .tag-link:before {
       content: "#"; }
     .blog-post-container .post-routes-list .category-link {
@@ -1122,7 +1114,7 @@ footer.footer-wrapper {
       height: 22px;
       font-size: 0.7em;
       margin-bottom: 2px;
-      color: #9E9E9E;
+      color: #5f859f;
       padding-top: 5px;
       padding-bottom: 5px;
       padding-left: 3px;
@@ -1131,7 +1123,7 @@ footer.footer-wrapper {
         .blog-post-container .post-routes-list .category-link {
           font-size: 0.6em; } }
     .blog-post-container .post-routes-list .category-link:hover {
-      color: #9C27B0; }
+      color: #37474F; }
     .blog-post-container .post-routes-list .category-link:after {
       content: " / "; }
   @media screen and (max-width: 500px) {
@@ -1151,7 +1143,8 @@ footer.footer-wrapper {
   .blog-post-container .post-cover {
     overflow: hidden;
     height: 300px;
-    width: 100%; }
+    width: 100%;
+    margin: 10px 0 30px 0; }
     @media screen and (max-width: 900px) {
       .blog-post-container .post-cover {
         height: 250px; } }
@@ -1173,30 +1166,28 @@ footer.footer-wrapper {
       display: inline-block;
       padding: 8px 16px; }
     .blog-post-container .Prev-next-post-container .previous-btn {
-      background-color: #f1f1f1;
-      color: black;
+      color: #000000;
       float: left;
       text-align: left;
-      width: auto;
-      border-bottom: 3px solid #cccccc; }
+      width: auto; }
       @media screen and (max-width: 400px) {
         .blog-post-container .Prev-next-post-container .previous-btn {
           width: 100%;
           margin: 5px 5px 5px 0px; } }
-    .blog-post-container .Prev-next-post-container .previous-btn:hover {
-      background-color: #cccccc; }
     .blog-post-container .Prev-next-post-container .next-btn {
-      background-color: #FFC107;
-      color: white;
+      color: #000000;
       float: right;
       text-align: right;
-      width: auto;
-      border-bottom: 3px solid #ffab05; }
+      width: auto; }
       @media screen and (max-width: 400px) {
         .blog-post-container .Prev-next-post-container .next-btn {
           width: 100%;
           margin: 5px 0px 5px 5px; } }
-    .blog-post-container .Prev-next-post-container .next-btn:hover {
+    .blog-post-container .Prev-next-post-container .next-btn:hover,
+    .blog-post-container .Prev-next-post-container .next-btn:active,
+    .blog-post-container .Prev-next-post-container .previous-btn:active,
+    .blog-post-container .Prev-next-post-container .previous-btn:hover {
+      color: #ffffff;
       background-color: #FFB300; }
   .blog-post-container .related-posts-container {
     display: -webkit-box;
@@ -1204,7 +1195,7 @@ footer.footer-wrapper {
     display: flex;
     margin: 5px 20px 0 20px;
     width: 100%;
-    background-color: #ffffff; }
+    background-color: #FFFFFF; }
     @media screen and (max-width: 800px) {
       .blog-post-container .related-posts-container {
         display: initial; } }
@@ -1230,7 +1221,7 @@ footer.footer-wrapper {
         line-height: 1.4em;
         text-align: right; }
       .blog-post-container .related-posts-container .related-post-box-info a:hover {
-        color: #8523f4; }
+        color: #29B6F6; }
     .blog-post-container .related-posts-container .related-post-box-cover {
       width: 100%;
       height: 90px;
@@ -1242,6 +1233,13 @@ footer.footer-wrapper {
         height: 100%; }
   .blog-post-container .related-posts-title {
     margin-top: 25px; }
+  .blog-post-container .image-wrapper img {
+    margin: 10px 5px 0 5px; }
+  .blog-post-container .image-wrapper a {
+    margin: 0; }
+  .blog-post-container .image-wrapper .image-caption {
+    text-align: center;
+    margin: 0 5px; }
 
 .archive-title {
   font-size: 1.2em;
@@ -1277,9 +1275,10 @@ footer.footer-wrapper {
       .list-items-container .list-item-tag {
         font-size: 0.9em;
         margin-left: 3px; } }
-  .list-items-container .list-item-tag:hover {
-    background-color: #E91E63;
-    border-color: #E91E63; }
+  .list-items-container .list-item-tag:hover,
+  .list-items-container .list-item-tag:active {
+    background-color: #b0167b;
+    border-color: #b0167b; }
   .list-items-container .list-item-tag:before {
     content: "#"; }
 
@@ -1291,7 +1290,7 @@ footer.footer-wrapper {
   font-size: 1em;
   margin-bottom: 5px;
   margin-left: 5px;
-  color: #4E342E;
+  color: #5f859f;
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 3px;
@@ -1300,8 +1299,9 @@ footer.footer-wrapper {
     .list-item-category {
       font-size: 0.9em; } }
 
-.list-item-category:hover {
-  color: #E91E63; }
+.list-item-category:hover,
+.list-item-category:active {
+  color: #b0167b; }
 
 .list-item-category:after {
   content: " / "; }
