--- a/_sass/0-base/normalize.sass
+++ b/_sass/0-base/normalize.sass
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Zilla+Slab:300,300i,400,400i,500,500i,600,600i,700,700i&subset=latin-ext')
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,600,600i,700,700i&subset=latin-ext')
 
-$font-stack: "Zilla Slab", Tahoma, sans-serif
-$font-stack-two: "Zilla Slab", Tahoma, sans-serif
+$font-stack: "Roboto", Tahoma, sans-serif
+$font-stack-two: "Roboto", Tahoma, sans-serif
 
 html
   font-family: $font-stack
