--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Zilla+Slab:300,300i,400,400i,500,500i,600,600i,700,700i&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,600,600i,700,700i&subset=latin-ext");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css");
 html {
-  font-family: "Zilla Slab", Tahoma, sans-serif;
+  font-family: "Roboto", Tahoma, sans-serif;
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%; }
@@ -36,7 +36,7 @@ hr {
   overflow: visible; }
 
 pre {
-  font-family: "Zilla Slab", Tahoma, sans-serif;
+  font-family: "Roboto", Tahoma, sans-serif;
   font-size: 1em; }
 
 a {
@@ -63,7 +63,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: "Zilla Slab", Tahoma, sans-serif;
+  font-family: "Roboto", Tahoma, sans-serif;
   font-size: 1em; }
 
 dfn {
@@ -108,7 +108,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: "Zilla Slab", Tahoma, sans-serif;
+  font-family: "Roboto", Tahoma, sans-serif;
   font-size: 100%;
   line-height: 1.15;
   margin: 0; }
@@ -289,7 +289,7 @@ hr {
 body {
   margin: 0px;
   padding: 0px;
-  font-family: "Zilla Slab", Tahoma, sans-serif;
+  font-family: "Roboto", Tahoma, sans-serif;
   font-size: 100%;
   font-weight: 500; }
 
@@ -300,7 +300,7 @@ h6, h5, h4, h3, h2, h1, p, a, small {
   list-style: none; }
 
 p {
-  font-family: "Zilla Slab", Tahoma, sans-serif; }
+  font-family: "Roboto", Tahoma, sans-serif; }
 
 .hide {
   display: none; }
@@ -1047,7 +1047,7 @@ footer.footer-wrapper {
   padding-right: 5px;
   margin: auto; }
   .blog-post-container p {
-    font-size: 1em;
+    font-size: 1.2em;
     color: #2b2b2b;
     font-weight: 100;
     line-height: 1.5em; }
