--- a/_sass/2-layouts/post.sass
+++ b/_sass/2-layouts/post.sass
@@ -48,6 +48,15 @@
       padding-top: 2px
       margin-right: 15px
       width: 100%
+      p
+        line-height: .1em
+      small
+        font-size: 0.75em
+        font-weight: 300
+        color: #BDBDBD
+        line-height: 1.7em
+        text-transform: none
+
 
 
   .post-routes-list
