--- a/_includes/theme/header.html
+++ b/_includes/theme/header.html
@@ -4,8 +4,8 @@
         <a href="{{ site.url }}" class="nav-logo">{{ site.title }}</a>
         <ul class="navigation">
 
-            <li><a href="{{ site.url }}/lists/categories">Categories</a></li>
-            <li><a href="{{ site.url }}/lists/tags">Tags</a></li>
+            <li><a href="{{ site.url }}/">Articles</a></li>
+            <li><a href="{{ site.url }}/list/items">Categories</a></li>
             <li><a href="{{ site.url }}/about/">About</a></li>
             <li><a href="https://sadra.github.io/">فارسی</a></li>
 
