--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -750,11 +750,12 @@ header.header-container {
     padding-right: 30px;
     margin: auto;
     border-bottom: 1px solid #ededed; }
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 600px) {
       header.header-container nav.nav-wrap {
         padding-top: 15px;
         padding-left: 15px;
-        padding-right: 15px; } }
+        padding-right: 15px;
+        display: block; } }
     header.header-container nav.nav-wrap .nav-logo {
       font-weight: 900;
       color: #000000;
@@ -772,7 +773,7 @@ header.header-container {
           -ms-flex-align: center;
               align-items: center;
       font-size: 1em; }
-      @media screen and (max-width: 500px) {
+      @media screen and (max-width: 600px) {
         header.header-container nav.nav-wrap .nav-logo {
           font-size: 0.9em; } }
     header.header-container nav.nav-wrap .nav-logo:hover {
@@ -790,7 +791,8 @@ header.header-container {
               justify-content: center;
       -webkit-box-align: center;
           -ms-flex-align: center;
-              align-items: center; }
+              align-items: center;
+      padding-left: 0 !important; }
       header.header-container nav.nav-wrap ul.navigation li {
         display: block;
         padding-right: 30px; }
@@ -801,13 +803,13 @@ header.header-container {
           font-size: 1em; }
         header.header-container nav.nav-wrap ul.navigation li a:hover {
           color: #009688; }
-        @media screen and (max-width: 500px) {
+        @media screen and (max-width: 600px) {
           header.header-container nav.nav-wrap ul.navigation li {
             padding-right: 10px; }
             header.header-container nav.nav-wrap ul.navigation li a {
-              font-size: 0.85em; } }
+              font-size: 1em; } }
       header.header-container nav.nav-wrap ul.navigation li:last-of-type {
-        padding-right: 0px; }
+        padding-right: 0; }
 
 footer.footer-wrapper {
   width: 80%;
@@ -905,7 +907,7 @@ footer.footer-wrapper {
 .content {
   padding: 30px 10px;
   margin: 0 auto;
-  width: 80%;
+  width: 85%;
   min-height: 60%;
   position: relative;
   z-index: 1;
@@ -919,7 +921,7 @@ footer.footer-wrapper {
   @media screen and (max-width: 500px) {
     .content {
       padding: 15px 5px;
-      width: 100%; } }
+      width: 95%; } }
 
 .content:after {
   content: "";
@@ -1082,6 +1084,14 @@ footer.footer-wrapper {
       padding-top: 2px;
       margin-right: 15px;
       width: 100%; }
+      .blog-post-container .post_created .post_info p {
+        line-height: 0.1em; }
+      .blog-post-container .post_created .post_info small {
+        font-size: 0.75em;
+        font-weight: 300;
+        color: #BDBDBD;
+        line-height: 1.7em;
+        text-transform: none; }
   .blog-post-container .post-routes-list {
     margin: 25px 0 15px 5px; }
     .blog-post-container .post-routes-list .tag-link {
