Modify list title

--- a/_sass/2-layouts/post.sass
+++ b/_sass/2-layouts/post.sass
@@ -49,14 +49,13 @@
       width: 100%
       p
         line-height: .1em
+        font-size: .95em
       small
         font-size: 0.75em
         font-weight: 300
         color: #BDBDBD
         line-height: 1.7em
         text-transform: none
-
-
 
   .post-routes-list
     margin: 25px 0 15px 5px
