Add arrow up butto

--- a/_layouts/blog_post.html
+++ b/_layouts/blog_post.html
@@ -2,7 +2,7 @@
 layout: theme
 ---
 
-<div class="content" dir="rtl">
+<div class="content">
 
     <div class="blog-post-container">
 
@@ -59,3 +59,8 @@ layout: theme
     </div>
 
 </div>
+
+
+<a id="back-to-top" href="#" class="back-to-top" role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left">
+    <img src="/assets/img/base/arrow-up.gif" class="arrow-up"/>
+</a>
