--- a/_sass/2-layouts/post.sass
+++ b/_sass/2-layouts/post.sass
@@ -199,7 +199,6 @@
         height: 100%
   .related-posts-title
     margin-top: 25px
-
   .image-wrapper
     img
       margin: 10px 5px 0 5px
@@ -208,3 +207,14 @@
     .image-caption
       text-align: center
       margin: 0 5px
+
+.back-to-top
+  cursor: pointer
+  position: fixed
+  bottom: 5px
+  left: 10px
+  display: none
+  .arrow-up
+    color: rgba(19, 96, 244, 0.8)
+    margin: 0
+    opacity: .8
