Add arrow_up button

--- a/_sass/2-layouts/post.sass
+++ b/_sass/2-layouts/post.sass
@@ -212,7 +212,7 @@
   cursor: pointer
   position: fixed
   bottom: 5px
-  left: 10px
+  right: 10px
   display: none
   z-index: 9999999
   .arrow-up
