--- a/_includes/theme/head.html
+++ b/_includes/theme/head.html
@@ -1,23 +1,56 @@
 <meta charset="utf-8">
 <meta content="IE-edge,chrome=1" http-equiv="X-UA-Compatable">
 <meta name="description" content="{{ site.description }}">
-<title>{{ page.title }}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-68873815-10', 'auto');
+    ga('send', 'pageview');
+</script>
+
+
+{% if page.title %}
+<title>Sadra Amlashi | {{ page.title }}</title>
+{% else %}
+<title>Sadra Amlashi's Blog</title>
+{% endif %}
+
 <meta property="og:type" content="website">
-<meta property="og:title" content="{{ page.title }}">
+{% if page.title %}
+<meta property="og:title" content="Sadra Amlashi | {{ page.title }}">
+{% else %}
+<meta property="og:title" content="Sadra Amlashi's Blog">
+{% endif %}
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 {% if page.cover %}
 <meta property="og:image" content="{{ page.cover }}" />
 {% else %}
 <meta property="og:image" content="{{ site.url }}/assets/img/avatar.jpg" />
 {% endif %}
-<meta property="og:site_name" content="{{ site.title }}">
+{% if page.title %}
+<meta property="og:site_name" content="Sadra Amlashi | {{ page.title }}">
+{% else %}
+<meta property="og:site_name" content="Sadra Amlashi's Blog">
+{% endif %}
 <meta property="og:description" content="{{ site.description }}">
 
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="{{  page.title }}">
+{% if page.title %}
+<meta property="twitter:title" content="Sadra Amlashi | {{ page.title }}">
+{% else %}
+<meta property="twitter:title" content="Sadra Amlashi's Blog">
+{% endif %}
 <meta name="twitter:description" content="{{ site.description }}">
+{% if page.cover %}
+<meta property="twitter:image" content="{{ site.url }}{{ page.cover }}" />
+{% else %}
+<meta property="twitter:image" content="{{ site.url }}/assets/img/avatar.jpg" />
+{% endif %}
+
 
 <link rel="alternative" href="/site-map.xml" title="{{ site.title }}" type="application/atom+xml">
 <link rel="short icon" type="image/x-icon" href="{{ site.url }}/assets/img/base/favicon.png">
