--- a/_includes/theme/head.html
+++ b/_includes/theme/head.html
@@ -13,42 +13,32 @@
 </script>
 
 
-{% if page.title %}
-<title>Sadra Amlashi | {{ page.title }}</title>
-{% else %}
-<title>Sadra Amlashi's Blog</title>
-{% endif %}
+<meta name="twitter:card" content="summary">
 
 <meta property="og:type" content="website">
-{% if page.title %}
-<meta property="og:title" content="Sadra Amlashi | {{ page.title }}">
-{% else %}
-<meta property="og:title" content="Sadra Amlashi's Blog">
-{% endif %}
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
-{% if page.cover %}
-<meta property="og:image" content="{{ page.cover }}" />
-{% else %}
-<meta property="og:image" content="{{ site.url }}/assets/img/avatar.jpg" />
-{% endif %}
-{% if page.title %}
-<meta property="og:site_name" content="Sadra Amlashi | {{ page.title }}">
-{% else %}
-<meta property="og:site_name" content="Sadra Amlashi's Blog">
-{% endif %}
 <meta property="og:description" content="{{ site.description }}">
+<meta name="twitter:description" content="{{ site.description }}">
 
-<meta name="twitter:card" content="summary">
 {% if page.title %}
+<title>Sadra Amlashi | {{ page.title }}</title>
+<meta property="og:title" content="Sadra Amlashi | {{ page.title }}">
+<meta property="og:site_name" content="Sadra Amlashi | {{ page.title }}">
 <meta property="twitter:title" content="Sadra Amlashi | {{ page.title }}">
 {% else %}
 <meta property="twitter:title" content="Sadra Amlashi's Blog">
+<meta property="og:site_name" content="Sadra Amlashi's Blog">
+<meta property="og:title" content="Sadra Amlashi's Blog">
+<title>Sadra Amlashi's Blog</title>
 {% endif %}
-<meta name="twitter:description" content="{{ site.description }}">
+
+
 {% if page.cover %}
 <meta property="twitter:image" content="{{ site.url }}{{ page.cover }}" />
+<meta property="og:image" content="{{ site.url }}{{ page.cover }}" />
 {% else %}
 <meta property="twitter:image" content="{{ site.url }}/assets/img/avatar.jpg" />
+<meta property="og:image" content="{{ site.url }}/assets/img/avatar.jpg" />
 {% endif %}
 
 
