Add new post about ios app moves to Foreground and Background

--- a/_includes/theme/head.html
+++ b/_includes/theme/head.html
@@ -18,9 +18,9 @@
 
 {% if page.title %}
 <title>Sadra Amlashi | {{ page.title }}</title>
-<meta property="og:title" content="Sadra Amlashi | {{ page.title }}">
-<meta property="og:site_name" content="Sadra Amlashi | {{ page.title }}">
-<meta property="twitter:title" content="Sadra Amlashi | {{ page.title }}">
+<meta property="og:title" content="{{ page.title }} | Sadra Amlashi">
+<meta property="og:site_name" content="{{ page.title }} | Sadra Amlashi">
+<meta property="twitter:title" content="{{ page.title }} | Sadra Amlashi">
 {% else %}
 <meta property="twitter:title" content="Sadra Amlashi's Blog">
 <meta property="og:site_name" content="Sadra Amlashi's Blog">
