Modify headres menu from text to icon

--- a/_includes/theme/header.html
+++ b/_includes/theme/header.html
@@ -4,9 +4,10 @@
         <a href="{{ site.url }}" class="nav-logo">{{ site.title }}</a>
         <ul class="navigation">
 
-            <li><a href="{{ site.url }}/">Articles</a></li>
-            <li><a href="{{ site.url }}/list/items">Categories</a></li>
-            <li><a href="{{ site.url }}/about/">About</a></li>
+            <li><a href="{{ site.url }}/"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></li>
+            <li><a href="{{ site.url }}/list/items"><i class="fa fa-tags" aria-hidden="true"></i></a></li>
+            <li><a href="{{ site.url }}/about/"><i class="fa fa-user-circle-o" aria-hidden="true"></i></a></li>
+            <li><a href="http://cv.isapanah.com/"><i class="fa fa-address-card-o" aria-hidden="true"></i></a></li>
             <li><a href="https://sadra.github.io/">فارسی</a></li>
 
         </ul>
