--- a/_sass/0-base/normalize.sass
+++ b/_sass/0-base/normalize.sass
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,600,600i,700,700i&subset=latin-ext')
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css")
 
 $font-stack: "Roboto", Tahoma, sans-serif
 $font-stack-two: "Roboto", Tahoma, sans-serif
