--- a/_sass/2-layouts/post.sass
+++ b/_sass/2-layouts/post.sass
@@ -17,12 +17,16 @@
     line-height: 1.5em
   ol
     li
+      line-height: 1.9em !important
       p
         line-height: 1.9em !important
         padding: 0
   ul
     li
       line-height: 1.9em !important
+      p
+        line-height: 1.9em !important
+        padding: 0
 
   .post-title-container
     width: 100%
