--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -674,20 +674,17 @@ blockquote {
   color: #2b2b2b;
   margin: 1.5em 1.5px;
   padding: 15px; }
-
-blockquote:before {
-  color: #BDBDBD;
-  content: " “";
-  font-family: Georgia, serif;
-  font-size: 4em;
-  line-height: 0.1em;
-  margin-left: 0.16em;
-  vertical-align: -0.4em;
-  margin-right: 10px; }
-
-blockquote p {
-  display: inline;
-  color: #2b2b2b !important; }
+  blockquote p {
+    color: #2b2b2b !important; }
+  blockquote p:first-child:before {
+    color: #BDBDBD;
+    content: " “";
+    font-family: Georgia, serif;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-left: 0.16em;
+    vertical-align: -0.4em;
+    margin-right: 10px; }
 
 .video-container {
   margin: 20px auto;
@@ -1054,11 +1051,16 @@ footer.footer-wrapper {
     color: #2b2b2b;
     font-weight: 100;
     line-height: 1.5em; }
-  .blog-post-container ol li p {
-    line-height: 1.9em !important;
-    padding: 0; }
+  .blog-post-container ol li {
+    line-height: 1.9em !important; }
+    .blog-post-container ol li p {
+      line-height: 1.9em !important;
+      padding: 0; }
   .blog-post-container ul li {
     line-height: 1.9em !important; }
+    .blog-post-container ul li p {
+      line-height: 1.9em !important;
+      padding: 0; }
   .blog-post-container .post-title-container {
     width: 100%;
     margin: 20px auto; }
