--- a/_includes/theme/header.html
+++ b/_includes/theme/header.html
@@ -6,7 +6,7 @@
 
             <li><a href="{{ site.url }}/">Articles</a></li>
             <li><a href="{{ site.url }}/list/items">Categories</a></li>
-            <li><a href="{{ site.url }}/about/">About</a></li>
+            <li><a href="{{ site.url }}/about">About</a></li>
             <li><a href="http://cv.isapanah.com/">C.V</a></li>
             <li><a href="https://sadra.github.io/">فارسی</a></li>
 
