--- a/_sass/1-modules/video.sass
+++ b/_sass/1-modules/video.sass
@@ -1,7 +1,7 @@
 .video-container
   margin: 20px auto
   width: 75%
-  background: url("//sadra.github.io/english/assets/img/base/not-loaded.png") no-repeat  center
+  background: url("/assets/img/base/not-loaded.png") no-repeat  center
   -webkit-background-size: cover
   -moz-background-size: cover
   -o-background-size: cover
