--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -689,7 +689,7 @@ blockquote {
 .video-container {
   margin: 20px auto;
   width: 75%;
-  background: url("//sadra.github.io/english/assets/img/base/not-loaded.png") no-repeat center;
+  background: url("/assets/img/base/not-loaded.png") no-repeat center;
   background-size: cover; }
   @media screen and (max-width: 600px) {
     .video-container {
